{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 193,
  "lineage": "569dd490-14b6-90dc-e6ab-4b76694303e2",
  "resources": [
    {
      "module": "module.dev-ansible-team-1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "PACJAD_ansible_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ad8ecac8af5fc52b",
            "arn": "arn:aws:ec2:eu-west-2:023962118602:instance/i-046fe1b1dafa177b4",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-046fe1b1dafa177b4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "PACJAD-key-team-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00b08db19ac08d8b5",
            "private_dns": "ip-10-0-3-10.eu-west-2.compute.internal",
            "private_ip": "10.0.3.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b8cee60b44fbf3f4",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ed1caa9b5a8c1ec5",
            "tags": {
              "Name": "PACJAD-ansible-team-1"
            },
            "tags_all": {
              "Name": "PACJAD-ansible-team-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-058723ca8b7d799be"
            ]
          },
          "dependencies": [
            "module.dev-keypair-team-1.aws_key_pair.PACJAD_key",
            "module.dev-securityGroups-team-1.aws_security_group.PACJAD_SG2",
            "module.dev-vpc-team-1.aws_subnet.PACJAD_PRV_SN2"
          ]
        }
      ]
    },
    {
      "module": "module.dev-bastianHost-team-1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "PACJAD_Bastian_Host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ad8ecac8af5fc52b",
            "arn": "arn:aws:ec2:eu-west-2:023962118602:instance/i-081392590d6a86922",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-081392590d6a86922",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "PACJAD-key-team-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a0ab4affd2703fa4",
            "private_dns": "ip-10-0-0-95.eu-west-2.compute.internal",
            "private_ip": "10.0.0.95",
            "public_ip": "18.135.96.226",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0113fe082a05795b7",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04fdb48625f61ca8f",
            "tags": {
              "Name": "PACJAD_Bastian_Host"
            },
            "tags_all": {
              "Name": "PACJAD_Bastian_Host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-058723ca8b7d799be"
            ]
          },
          "dependencies": [
            "module.dev-keypair-team-1.aws_key_pair.PACJAD_key",
            "module.dev-securityGroups-team-1.aws_security_group.PACJAD_SG2",
            "module.dev-vpc-team-1.aws_subnet.PACJAD_PUB_SN1"
          ]
        }
      ]
    },
    {
      "module": "module.dev-dockerHost-team-1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Docker_Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ad8ecac8af5fc52b",
            "arn": "arn:aws:ec2:eu-west-2:023962118602:instance/i-0589e328de2400cd7",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0589e328de2400cd7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "PACJAD-key-team-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06330e72184bfd718",
            "private_dns": "ip-10-0-2-36.eu-west-2.compute.internal",
            "private_ip": "10.0.2.36",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-082072d515ca3296f",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0502f5492db465924",
            "tags": {
              "Name": "Docker_Server"
            },
            "tags_all": {
              "Name": "Docker_Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0764643db876fe8cd"
            ]
          },
          "dependencies": [
            "module.dev-keypair-team-1.aws_key_pair.PACJAD_key",
            "module.dev-securityGroups-team-1.aws_security_group.PACJAD_SG1",
            "module.dev-vpc-team-1.aws_subnet.PACJAD_PRV_SN1"
          ]
        }
      ]
    },
    {
      "module": "module.dev-jenkins-team-1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "PACJAD_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ad8ecac8af5fc52b",
            "arn": "arn:aws:ec2:eu-west-2:023962118602:instance/i-0ce0b63b9ccf133ee",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ce0b63b9ccf133ee",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "PACJAD-key-team-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fe67316f8cc4167b",
            "private_dns": "ip-10-0-2-179.eu-west-2.compute.internal",
            "private_ip": "10.0.2.179",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06b945ff79ff9d594",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0502f5492db465924",
            "tags": {
              "Name": "PACJAD-jenkins-team-1"
            },
            "tags_all": {
              "Name": "PACJAD-jenkins-team-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0764643db876fe8cd"
            ]
          },
          "dependencies": [
            "module.dev-keypair-team-1.aws_key_pair.PACJAD_key",
            "module.dev-securityGroups-team-1.aws_security_group.PACJAD_SG1",
            "module.dev-vpc-team-1.aws_subnet.PACJAD_PRV_SN1"
          ]
        }
      ]
    },
    {
      "module": "module.dev-loadbalancer-team-1",
      "mode": "managed",
      "type": "aws_elb",
      "name": "jenkins_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:023962118602:loadbalancer/jenkins-elb-team-1",
            "availability_zones": [
              "eu-west-2a"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "jenkins-elb-team-1-1689205021.eu-west-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "TCP:8080",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "jenkins-elb-team-1",
            "idle_timeout": 400,
            "instances": [
              "i-0ce0b63b9ccf133ee"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "jenkins-elb-team-1",
            "security_groups": [
              "sg-0764643db876fe8cd"
            ],
            "source_security_group": "023962118602/dev-PACJAD_SG1-docker-jenkins",
            "source_security_group_id": "sg-0764643db876fe8cd",
            "subnets": [
              "subnet-04fdb48625f61ca8f"
            ],
            "tags": {
              "Name": "jenkins-elb-team-1"
            },
            "tags_all": {
              "Name": "jenkins-elb-team-1"
            },
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.dev-jenkins-team-1.aws_instance.PACJAD_jenkins",
            "module.dev-keypair-team-1.aws_key_pair.PACJAD_key",
            "module.dev-securityGroups-team-1.aws_security_group.PACJAD_SG1",
            "module.dev-vpc-team-1.aws_subnet.PACJAD_PRV_SN1",
            "module.dev-vpc-team-1.aws_subnet.PACJAD_PUB_SN1"
          ]
        }
      ]
    },
    {
      "module": "module.dev-loadbalancer-team-1",
      "mode": "managed",
      "type": "aws_lb",
      "name": "docker-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:023962118602:loadbalancer/app/docker-alb-team1/853f04833f591c68",
            "arn_suffix": "app/docker-alb-team1/853f04833f591c68",
            "desync_mitigation_mode": "defensive",
            "dns_name": "docker-alb-team1-1238589806.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:023962118602:loadbalancer/app/docker-alb-team1/853f04833f591c68",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "docker-alb-team1",
            "security_groups": [
              "sg-0764643db876fe8cd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04fdb48625f61ca8f"
              },
              {
                "subnet_id": "subnet-0b8ceddd2774d33ee"
              }
            ],
            "subnets": [
              "subnet-04fdb48625f61ca8f",
              "subnet-0b8ceddd2774d33ee"
            ],
            "tags": {
              "name": "Docker-lb-team-1"
            },
            "tags_all": {
              "name": "Docker-lb-team-1"
            },
            "vpc_id": "vpc-0071f25d2271f51d6",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.dev-securityGroups-team-1.aws_security_group.PACJAD_SG1",
            "module.dev-vpc-team-1.aws_subnet.PACJAD_PUB_SN1",
            "module.dev-vpc-team-1.aws_subnet.PACJAD_PUB_SN2",
            "module.dev-vpc-team-1.aws_vpc.PACJAD_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.dev-loadbalancer-team-1",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "PACJADT1-lb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:023962118602:listener/app/docker-alb-team1/853f04833f591c68/654291baabdcb6b0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:023962118602:targetgroup/pacjad-tg-team-1/5e99783659386f20",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:023962118602:listener/app/docker-alb-team1/853f04833f591c68/654291baabdcb6b0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:023962118602:loadbalancer/app/docker-alb-team1/853f04833f591c68",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev-loadbalancer-team-1.aws_lb.docker-alb",
            "module.dev-loadbalancer-team-1.aws_lb_target_group.docker-tg",
            "module.dev-securityGroups-team-1.aws_security_group.PACJAD_SG1",
            "module.dev-vpc-team-1.aws_subnet.PACJAD_PUB_SN1",
            "module.dev-vpc-team-1.aws_subnet.PACJAD_PUB_SN2",
            "module.dev-vpc-team-1.aws_vpc.PACJAD_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.dev-loadbalancer-team-1",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "docker-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:023962118602:targetgroup/pacjad-tg-team-1/5e99783659386f20",
            "arn_suffix": "targetgroup/pacjad-tg-team-1/5e99783659386f20",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:023962118602:targetgroup/pacjad-tg-team-1/5e99783659386f20",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "pacjad-tg-team-1",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0071f25d2271f51d6"
          },
          "dependencies": [
            "module.dev-vpc-team-1.aws_vpc.PACJAD_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.dev-loadbalancer-team-1",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "PACJADT1-tg-att",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:023962118602:targetgroup/pacjad-tg-team-1/5e99783659386f20-20220511220020069400000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:023962118602:targetgroup/pacjad-tg-team-1/5e99783659386f20",
            "target_id": "i-0589e328de2400cd7"
          },
          "dependencies": [
            "module.dev-dockerHost-team-1.aws_instance.Docker_Server",
            "module.dev-keypair-team-1.aws_key_pair.PACJAD_key",
            "module.dev-loadbalancer-team-1.aws_lb_target_group.docker-tg",
            "module.dev-securityGroups-team-1.aws_security_group.PACJAD_SG1",
            "module.dev-vpc-team-1.aws_subnet.PACJAD_PRV_SN1"
          ]
        }
      ]
    },
    {
      "module": "module.dev-securityGroups-team-1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "PACJAD_SG1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:023962118602:security-group/sg-0764643db876fe8cd",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0764643db876fe8cd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow custom_http from PACJAD_VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow http from PACJAD_VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from PACJAD_VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-PACJAD_SG1-docker-jenkins",
            "name_prefix": "",
            "owner_id": "023962118602",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-PACJAD_SG1-docker-jenkins"
            },
            "tags_all": {
              "Name": "dev-PACJAD_SG1-docker-jenkins"
            },
            "timeouts": null,
            "vpc_id": "vpc-0071f25d2271f51d6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev-vpc-team-1.aws_vpc.PACJAD_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.dev-securityGroups-team-1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "PACJAD_SG2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:023962118602:security-group/sg-058723ca8b7d799be",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-058723ca8b7d799be",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from PACJAD_VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-PACJAD-SG2-bastion-ansible",
            "name_prefix": "",
            "owner_id": "023962118602",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-PACJAD-SG2-bastion-ansible"
            },
            "tags_all": {
              "Name": "dev-PACJAD-SG2-bastion-ansible"
            },
            "timeouts": null,
            "vpc_id": "vpc-0071f25d2271f51d6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev-vpc-team-1.aws_vpc.PACJAD_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.dev-securityGroups-team-1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "PACJAD_SG3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:023962118602:security-group/sg-07e17069603ce7bf3",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07e17069603ce7bf3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from PACJAD_VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "dev-PACJAD-SG3-rds",
            "name_prefix": "",
            "owner_id": "023962118602",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-PACJAD-SG3-rds"
            },
            "tags_all": {
              "Name": "dev-PACJAD-SG3-rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-0071f25d2271f51d6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev-vpc-team-1.aws_vpc.PACJAD_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.dev-vpc-team-1",
      "mode": "managed",
      "type": "aws_eip",
      "name": "PACJAD_EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04af372c0a6dc8ccc",
            "association_id": "eipassoc-05faad91a18c5ee85",
            "domain": "vpc",
            "id": "eipalloc-04af372c0a6dc8ccc",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-064780e94a6bb9e1d",
            "private_dns": "ip-10-0-0-106.eu-west-2.compute.internal",
            "private_ip": "10.0.0.106",
            "public_dns": "ec2-18-135-80-218.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.135.80.218",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.dev-vpc-team-1.aws_internet_gateway.PACJAD_IGW",
            "module.dev-vpc-team-1.aws_vpc.PACJAD_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.dev-vpc-team-1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "PACJAD_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:023962118602:internet-gateway/igw-036fc015aa0e72279",
            "id": "igw-036fc015aa0e72279",
            "owner_id": "023962118602",
            "tags": {
              "Name": "PACJAD_IGW"
            },
            "tags_all": {
              "Name": "PACJAD_IGW"
            },
            "vpc_id": "vpc-0071f25d2271f51d6"
          },
          "dependencies": [
            "module.dev-vpc-team-1.aws_vpc.PACJAD_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.dev-vpc-team-1",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "PACJAD_NAT_GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04af372c0a6dc8ccc",
            "connectivity_type": "public",
            "id": "nat-06395e851024fc0a1",
            "network_interface_id": "eni-064780e94a6bb9e1d",
            "private_ip": "10.0.0.106",
            "public_ip": "18.135.80.218",
            "subnet_id": "subnet-04fdb48625f61ca8f",
            "tags": {
              "Name": "PACJAD_NAT_GW"
            },
            "tags_all": {
              "Name": "PACJAD_NAT_GW"
            }
          },
          "dependencies": [
            "module.dev-vpc-team-1.aws_eip.PACJAD_EIP",
            "module.dev-vpc-team-1.aws_internet_gateway.PACJAD_IGW",
            "module.dev-vpc-team-1.aws_subnet.PACJAD_PUB_SN1",
            "module.dev-vpc-team-1.aws_vpc.PACJAD_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.dev-vpc-team-1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PACJAD_RT_Prv_SN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:023962118602:route-table/rtb-02f6ccc5964aa9394",
            "id": "rtb-02f6ccc5964aa9394",
            "owner_id": "023962118602",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-06395e851024fc0a1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PACJAD_RT_Prv_SN"
            },
            "tags_all": {
              "Name": "PACJAD_RT_Prv_SN"
            },
            "timeouts": null,
            "vpc_id": "vpc-0071f25d2271f51d6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev-vpc-team-1.aws_nat_gateway.PACJAD_NAT_GW",
            "module.dev-vpc-team-1.aws_vpc.PACJAD_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.dev-vpc-team-1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PACJAD_RT_Pub_SN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:023962118602:route-table/rtb-09b1d0465e1183c48",
            "id": "rtb-09b1d0465e1183c48",
            "owner_id": "023962118602",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-036fc015aa0e72279",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PACJAD_RT_Pub_SN"
            },
            "tags_all": {
              "Name": "PACJAD_RT_Pub_SN"
            },
            "timeouts": null,
            "vpc_id": "vpc-0071f25d2271f51d6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev-vpc-team-1.aws_internet_gateway.PACJAD_IGW",
            "module.dev-vpc-team-1.aws_vpc.PACJAD_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.dev-vpc-team-1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PACJAD_Private_RT_ass_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cdb17b824bd89ba0",
            "route_table_id": "rtb-02f6ccc5964aa9394",
            "subnet_id": "subnet-0502f5492db465924"
          },
          "dependencies": [
            "module.dev-vpc-team-1.aws_eip.PACJAD_EIP",
            "module.dev-vpc-team-1.aws_internet_gateway.PACJAD_IGW",
            "module.dev-vpc-team-1.aws_nat_gateway.PACJAD_NAT_GW",
            "module.dev-vpc-team-1.aws_route_table.PACJAD_RT_Prv_SN",
            "module.dev-vpc-team-1.aws_subnet.PACJAD_PRV_SN1",
            "module.dev-vpc-team-1.aws_subnet.PACJAD_PUB_SN1",
            "module.dev-vpc-team-1.aws_vpc.PACJAD_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.dev-vpc-team-1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PACJAD_Private_RT_ass_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006c0486a2cfe7fba",
            "route_table_id": "rtb-02f6ccc5964aa9394",
            "subnet_id": "subnet-0ed1caa9b5a8c1ec5"
          },
          "dependencies": [
            "module.dev-vpc-team-1.aws_eip.PACJAD_EIP",
            "module.dev-vpc-team-1.aws_internet_gateway.PACJAD_IGW",
            "module.dev-vpc-team-1.aws_nat_gateway.PACJAD_NAT_GW",
            "module.dev-vpc-team-1.aws_route_table.PACJAD_RT_Prv_SN",
            "module.dev-vpc-team-1.aws_subnet.PACJAD_PRV_SN2",
            "module.dev-vpc-team-1.aws_subnet.PACJAD_PUB_SN1",
            "module.dev-vpc-team-1.aws_vpc.PACJAD_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.dev-vpc-team-1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PACJAD_Public_RT_ass_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01abc4cc4ca581694",
            "route_table_id": "rtb-09b1d0465e1183c48",
            "subnet_id": "subnet-04fdb48625f61ca8f"
          },
          "dependencies": [
            "module.dev-vpc-team-1.aws_internet_gateway.PACJAD_IGW",
            "module.dev-vpc-team-1.aws_route_table.PACJAD_RT_Pub_SN",
            "module.dev-vpc-team-1.aws_subnet.PACJAD_PUB_SN1",
            "module.dev-vpc-team-1.aws_vpc.PACJAD_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.dev-vpc-team-1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PACJAD_Public_RT_ass_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c077912cef63ffc",
            "route_table_id": "rtb-09b1d0465e1183c48",
            "subnet_id": "subnet-0b8ceddd2774d33ee"
          },
          "dependencies": [
            "module.dev-vpc-team-1.aws_internet_gateway.PACJAD_IGW",
            "module.dev-vpc-team-1.aws_route_table.PACJAD_RT_Pub_SN",
            "module.dev-vpc-team-1.aws_subnet.PACJAD_PUB_SN2",
            "module.dev-vpc-team-1.aws_vpc.PACJAD_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.dev-vpc-team-1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PACJAD_PRV_SN1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:023962118602:subnet/subnet-0502f5492db465924",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0502f5492db465924",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "023962118602",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PACJAD_PRV_SN1"
            },
            "tags_all": {
              "Name": "PACJAD_PRV_SN1"
            },
            "vpc_id": "vpc-0071f25d2271f51d6"
          },
          "dependencies": [
            "module.dev-vpc-team-1.aws_vpc.PACJAD_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.dev-vpc-team-1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PACJAD_PRV_SN2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:023962118602:subnet/subnet-0ed1caa9b5a8c1ec5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed1caa9b5a8c1ec5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "023962118602",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PACJAD_PRV_SN2"
            },
            "tags_all": {
              "Name": "PACJAD_PRV_SN2"
            },
            "vpc_id": "vpc-0071f25d2271f51d6"
          },
          "dependencies": [
            "module.dev-vpc-team-1.aws_vpc.PACJAD_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.dev-vpc-team-1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PACJAD_PUB_SN1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:023962118602:subnet/subnet-04fdb48625f61ca8f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04fdb48625f61ca8f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "023962118602",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PACJAD_PUB_SN1"
            },
            "tags_all": {
              "Name": "PACJAD_PUB_SN1"
            },
            "vpc_id": "vpc-0071f25d2271f51d6"
          },
          "dependencies": [
            "module.dev-vpc-team-1.aws_vpc.PACJAD_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.dev-vpc-team-1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PACJAD_PUB_SN2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:023962118602:subnet/subnet-0b8ceddd2774d33ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8ceddd2774d33ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "023962118602",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PACJAD_PUB_SN2"
            },
            "tags_all": {
              "Name": "PACJAD_PUB_SN2"
            },
            "vpc_id": "vpc-0071f25d2271f51d6"
          },
          "dependencies": [
            "module.dev-vpc-team-1.aws_vpc.PACJAD_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.dev-vpc-team-1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "PACJAD_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:023962118602:vpc/vpc-0071f25d2271f51d6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-037b3a05f063d025b",
            "default_route_table_id": "rtb-0563a7b2fd41b51ee",
            "default_security_group_id": "sg-04cde79645d470d8a",
            "dhcp_options_id": "dopt-0b0db0c12159293f4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0071f25d2271f51d6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0563a7b2fd41b51ee",
            "owner_id": "023962118602",
            "tags": {
              "Name": "dev-PACJAD-team-1"
            },
            "tags_all": {
              "Name": "dev-PACJAD-team-1"
            }
          }
        }
      ]
    }
  ]
}